# llp-assignment-3

./: .gitignore  CMakeLists.txt  README.md  client.c  request_processor.c  request_processor.h  server.c  structs.thrift
client/: Makefile  client_interface.c  client_interface.h  data.c  data.h  sql.l  sql.y
gen-c_glib/: data_exchange_service.c  data_exchange_service.h  structs_types.c  structs_types.h
serializer/: t_client_serializer.c  t_client_serializer.h
server/: CMakeLists.txt  README.md  build.sh  data.c  data.h  data_iterator.c  data_iterator.h  database.c  database.h  main.c  table.c  table.h  util.c  util.h
server/src/: data.c  data.h  data_iterator.c  data_iterator.h  database_manager.c  database_manager.h  functional.h  main.c  table.c  table.h  tests.c  tests.h  util.c  util.h
