cmake_minimum_required(VERSION 3.19)
project(llp_lab1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/../build)
include_directories("/usr/local/lib/", "/opt/homebrew/Cellar/glib/2.78.0/include/glib-2.0/", "/opt/homebrew/Cellar/glib/2.78.0/include/", "/opt/homebrew/Cellar/glib/2.78.0/lib/glib-2.0/include/", "~/Downloads/thrift-0.17.0/lib/c_glib/src/")
add_executable(llp_lab1 src/main.c src/tests.c src/util.c src/table.c src/database_manager.c src/data.c src/data_iterator.c)
